2010-08-09 Pierre Wieser <pwieser@trychlos.org>

	Allow writing of empty data.

	* src/api/na-data-boxed.h:
	* src/core/na-data-boxed.c
	(na_data_boxed_is_set): Removed function.
	(na_data_boxed_is_default): New function.

	* src/io-desktop/nadp-writer.c (nadp_writer_ifactory_provider_write_data):
	* src/io-gconf/nagp-writer.c (nagp_writer_write_data):
	* src/io-xml/naxml-writer.c (naxml_writer_write_data):
	Updated accordingly.

	* src/core/na-object-item-factory.c:
	* src/core/na-object-profile-factory.c:
	Remove useless log description for a fake data.

	* src/io-desktop/nadp-reader.c
	(nadp_reader_ifactory_provider_read_data):
	* src/io-xml/naxml-reader.c (read_data_boxed_from_node):
	Set NADataBoxed as soon as a value is found.

	Review pre- and post- write operations in I/O providers.

	* src/core/na-object-action.c: Cleanup the code.

	* src/core/na-object-item-factory.c:
	NAFO_DATA_IVERSION becomes unwritable.

	* src/io-desktop/nadp-writer.c:
	* src/io-gconf/nagp-writer.c:
	* src/io-xml/naxml-writer.c: Cleanup the code.

	Immediately reacts to a status change in I/O providers.

	* src/core/na-ipivot-consumer.c:
	* src/core/na-ipivot-consumer.h
	(na_ipivot_consumer_notify_of_io_provider_prefs_changed): New function.
	(on_io_provider_prefs_changed): New interface API.

	* src/core/na-pivot.c (monitor_runtime_preferences):
	Add a monitor on io-providers GConf branch.

	* src/nact/nact-main-window.c
	(ipivot_consumer_on_io_provider_prefs_changed): New function.

	Controls are not modifiable for a read-only item.

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h
	(nact_gtk_utils_set_initial_state, nact_gtk_utils_reset_initial_state):
	New functions.

	* src/nact/nact-icommand-tab.c (on_tab_updatable_selection_changed):
	Manage working directory browse button.

	* src/nact/nact-ienvironment-tab.c (on_tab_updatable_selection_changed):
	Manage try exec and show if running browse buttons.
	Manage desktop environment radio buttons.
