@@ -28,6 +28,8 @@ N-A ENHANCEMENTS
 - 2010-07-27: while editing a new filter, making it duplicate, try to keep editing
   instead of terminating the edition and letting the old value
 
+- 2010-08-10: non-notification delay after save should be a preference
+
 - 2010-08-09: na-pivot:st_burst_timeout should be a preference
 
 - 2010-08-09: plugins should be able to provide a preference page
